Mon Aug 25 10:47:30 2003  George Lebl <jirka@5z.com>

	* daemon/auth.c: if the .Xauthority would be empty, just
	  unlink the file.  That is nicer to systems with quotas.

	* daemon/slave.c: It appears some people are not letting
	  us redirect the ~/.xsession-errors and close the pipe
	  for us and we weren't handling EOF correctly (and ran
	  into a very tight loop then).  This fixes #120580.
	  Also fix select usage, and fix some minor bugs with
	  respect to returns from the read calls.  Also catch
	  and handle the XFSZ signal to avoid abrupt logouts when
	  evil limits are set.

	* docs/C/gdm.xml: updates relating to the ~/.xsession-errors
	  stuff and how to handle the Xsession file.

Fri Aug 22 16:11:15 2003  George Lebl <jirka@5z.com>

	* daemon/misc.[ch], daemon/auth.c, daemon/filecheck.c, daemon/gdm.c,
	  daemon/server.c, daemon/slave.c: construct files properly using
	  g_build_filename, add a utility for this gdm_make_filename if
	  we want to build out of dir, name and extension.  Fixes
	  bug #118040

	* daemon/gdm.c, daemon/slave.c: remove unused variable

Fri Aug 22 13:19:05 2003  George Lebl <jirka@5z.com>

	* AUTHORS: update to be correct UTF-8

Thu Aug 21 14:35:25 2003  George Lebl <jirka@5z.com>

	* docs/Makefile.am, docs/gdm.1: add a very simple man page

Thu Aug 21 14:10:44 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.c: add --version option to fix #120409

Thu Aug 21 14:05:09 2003  George Lebl <jirka@5z.com>

	* gui/gdmsetup.desktop.in: Add System to categories to partly fix
	  #120360.  We can't add Settings as that would break the spec
	  as spec says settings are only for desktop settings and not
	  for system setup.

Wed Aug 20 18:55:06 2003  George Lebl <jirka@5z.com>

	* AUTHORS: update, haven't done so in a while

Wed Aug 20 13:21:48 2003  George Lebl <jirka@5z.com>

	* Release 2.4.2.101

Wed Aug 20 12:13:04 2003  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, daemon/gdm.h: sync some defaults and make