@@ -1,3 +1,12 @@
+Mon Aug 25 11:13:08 2003  George Lebl <jirka@5z.com>
+
+	* gui/gdmsetup.c: make insensitive the optiosn which make no sense
+	  in the security page when actions menu is off.  Partly fixes
+	  #120639, the other part can be fixed after UI freeze is off.
+
+	* docs/C/gdm.xml: update the SystemMenu (Actions menu) key
+	  description.
+
 Mon Aug 25 10:47:30 2003  George Lebl <jirka@5z.com>
 
 	* daemon/auth.c: if the .Xauthority would be empty, just
